apps/media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  selector:
    app: nzbget
  ports:
    - port: 6789
      targetPort: 6789
